[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ConMedRL"
dynamic = ["version"]
description = "An Offline Constrained Reinforcement Learning Toolkit for Medical Decision Making"
readme = "PYPI_README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Maotong Sun", email = "maotong.sun@tum.de"},
    {name = "Jingui Xie", email = "jingui.xie@tum.de"},
]
maintainers = [
    {name = "Maotong Sun", email = "maotong.sun@tum.de"},
    {name = "Jingui Xie", email = "jingui.xie@tum.de"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
keywords = [
    "reinforcement learning",
    "constrained reinforcement learning",
    "offline reinforcement learning", 
    "clinical decision support",
    "healthcare",
    "ICU",
    "critical care",
    "machine learning",
    "artificial intelligence"
]
dependencies = [
    # Core dependencies
    "flask==2.2.2",
    "scikit-learn==1.2.1", 
    "torch>=1.8.0",
    "numpy==1.23.5",
    "pandas==1.5.3",
    "tqdm==4.64.1",
    # Web server and task queue
    "celery==5.3.6",
    "gunicorn==20.1.0",
    # Image processing
    "pillow==9.4.0",
    # HTTP requests
    "requests==2.31.0",
    # Data processing (for large-scale data preprocessing)
    "dask[complete]>=2023.1.0",
    "threadpoolctl>=3.1.0",
    "joblib>=1.2.0",
    # Jupyter ecosystem
    "jupyter==1.0.0",
    "jupyterlab==4.0.5",
    "notebook==7.0.2",
    # Visualization
    "matplotlib==3.7.1",
    "seaborn==0.12.2",
    "plotly==5.17.0",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/smt970913/ConMED-RL"
Documentation = "https://github.com/smt970913/ConMED-RL#readme"
Repository = "https://github.com/smt970913/ConMED-RL"
"Bug Tracker" = "https://github.com/smt970913/ConMED-RL/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0", 
    "black>=21.0",
    "flake8>=3.8",
    "jupyter>=1.0",
    "notebook>=6.0",
]
models = [
    "torch>=1.8.0",
    "torchvision>=0.9.0",
]
viz = [
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
]

[tool.setuptools]
packages = ["ConMedRL", "Data"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "ConMedRL.__version__"}

[tool.setuptools.package-data]
ConMedRL = ["*.py"]
Data = ["**/*.py"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 